--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
             <p style="font-size: 2.5vw; font-weight:800">此乃一封突如其来的情感书简，还望你体谅它的匆忙</p>
             <p>真不知道该怎么表达对你的喜欢，于是听取多年前的那个自己的建议：“何不提笔诉心”；
                 可是许久未动过笔，笔力衰弱，实在难堪，固只能以这样的方式来完成这封书笺；下面两个按钮,
-                你如果好奇，可以点击"不好"，但是如果连续点击超过十次，这封情书就会销毁(会有延迟或我的代码有问题🤡)，
-                若是接受我，请点击"好"，我想邀你于周末的午后，谈笑风间共进晚餐，届时我的服务器会将这封信发布在我的博客上(会有延迟或者我的代码有问题🤡);
+                文本占位文本占位文本占位
             <p>
         </div>
         <img src="5love.png" style="float:left;">
@@ -85,7 +84,7 @@
 
         <section style="display: inline-block;">
             <p style="width:max-content;">
-                <!-- 待调整                                     -->
+                <!-- 这是我的诗，要给表白对象自己写去   -->
                 夜幕终于来临，<br>
                 心声在月光中诉说，<br>
                 指尖在键盘上跃动;<br>
